stuff done during class

--- a/cheat-sheets/03-Strings.ipynb
+++ b/cheat-sheets/03-Strings.ipynb
@@ -28,7 +28,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "firstName = \"Johan\""
+      "firstName = "Johan"
      ],
      "language": "python",
      "metadata": {},
